syntax = "proto3";

package events.inventory;

option go_package = "proto-go/events";

message StockReserved {
  string order_id = 1;
  string occurred_at = 2; // RFC3339
}

message StockReservationFailed {
  string order_id = 1;
  string reason = 2;
  string occurred_at = 3; // RFC3339
}


